--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "receive and send random messages",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/MateusIkezaki/RandomMessages/issues"
   },
-  "homepage": "https://github.com/MateusIkezaki/RandomMessages#readme"
+  "homepage": "https://github.com/MateusIkezaki/RandomMessages#readme",
+  "dependencies": {
+    "connect": "^3.7.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "nedb": "^1.8.0",
+    "node-fetch": "^2.6.0",
+    "serve-static": "^1.14.1"
+  }
 }
